@@ -15,6 +15,8 @@ sub init {
     $self->analyze_and_check_mem_subsystem("Classes::Juniper::NetScreen::Component::MemSubsystem");
   } elsif ($self->mode =~ /device::hardware::health/) {
     $self->analyze_and_check_environmental_subsystem("Classes::Juniper::NetScreen::Component::EnvironmentalSubsystem");
+  } elsif ($self->mode =~ /device::ha::status/) {
+    $self->analyze_and_check_environmental_subsystem("Classes::Juniper::NetScreen::Component::VsdSubsystem");
   } else {
     $self->no_such_mode();
   }
